scrollbar min height fix

--- a/src/components/ComponentStyle.css
+++ b/src/components/ComponentStyle.css
@@ -593,7 +593,7 @@ input.largeCheckbox{
 .platformContainer{
 	width: 100%;
 	height: 100%;
-	min-height: 1000px;
+	min-height: 900px;
 	overflow-y: hidden;
 }
 
